Sale Price List from EDI #050812

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -4,8 +4,10 @@ depends:
     ir
     sale
     party_edi
-extra_depends:
+extras_depend:
+    sale_discount
     sale_price_list
 xml:
+    party.xml
     sale_edi.xml
     message.xml
